--- a/ogl_shader_manipulation/ogl_shader_manipulation.vcxproj.filters
+++ b/ogl_shader_manipulation/ogl_shader_manipulation.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitattributes" />
+  </ItemGroup>
 </Project>
